fix: reduce white space between featured slider and highlighted posts on mobile
- Reduce .hm-fp1 bottom margin from 35px to 15px on mobile
- Reduce .hm-slide-holder fixed height on mobile (300px tablet, 220px phone)

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1403,6 +1403,9 @@ html.hm-dark .hm-article {
 }
 
 @media (max-width: 767px) {
+  .hm-fp1 {
+    margin: 5px 0 15px;
+  }
   .hm-fp1::after {
     display: block;
     content: "";
@@ -1780,13 +1783,13 @@ li.hm-tab a {
 
 @media (max-width: 768px) {
   .hm-slide-holder {
-    height: 340px;
+    height: 300px;
   }
 }
 
 @media (max-width: 480px) {
   .hm-slide-holder {
-    height: 260px;
+    height: 220px;
   }
 }
 
